# mobile-multi-mod-llm

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  ADVANCED_FEATURES_DEPLOYMENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_RECORD.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_MASTER_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_ADVANCED.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_MASTER.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_SUCCESS.txt  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEVELOPMENT.md  Dockerfile  GLOBAL_DEPLOYMENT_GUIDE_FINAL.md  IMPLEMENTATION_SUMMARY.md  LICENSE_HEADER.txt  Makefile  PRODUCTION_DEPLOYMENT_READY.md  PRODUCTION_READINESS_SUMMARY.md  PROJECT_CHARTER.md  README.md  README_AUTONOMOUS_SDLC_FINAL.md  README_SELF_HEALING_PIPELINE_GUARD.md  SDLC_ENHANCEMENTS_SUMMARY.md  (+70 more)
.devcontainer/: devcontainer.json  postCreate.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  mobile_compatibility.yml  performance_regression.yml
.terragon/: README.md  __init__.py  autonomous_executor.py  pr_template.md  requirements.txt  scoring_engine.py  terragon_sdlc.py  value-config.yaml  value_discovery.py  value_metrics.py
deployment/: Dockerfile  Dockerfile.production  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  healthcheck.py  production-deployment-final.yml  production-deployment-guide.md
deployment/k8s/: deployment.yaml
docker/: Dockerfile.production  docker-compose.production.yml  entrypoint.sh  healthcheck.py
docs/: ADVANCED_FEATURES_GUIDE.md  ARCHITECTURE_DECISION_RECORDS.md  BUILD.md  GLOBAL_DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  UPGRADE_ROADMAP.md  index.md
docs/adr/: 001-int2-quantization-choice.md  README.md  template.md
docs/monitoring/: README.md
docs/runbooks/: README.md  model-load-failure.md  service-down.md
docs/workflows/: README.md  WORKFLOW_SETUP_GUIDE.md  WORKFLOW_TEMPLATES.md  ci-cd-setup.md
exports/: android_deployment_config.json  export_metadata.json  ios_deployment_config.json
exports/android/: mobile_multimodal_android_deployment_metadata.json  (+1 more)
kubernetes/: deployment.yaml
mmmllm/: __init__.py  benchmark.py  fusion.py  quantizer.py  text_decoder.py  vision_encoder.py
mobile_multimodal_cache/: cache_metadata.db
monitoring/: alerts.yml  health-checks.yml  mobile-observability.yml  observability.yml  prometheus.yml  telemetry.yml
scripts/: build.sh  chaos-testing-runner.py  check-slsa-compliance.sh  check_quantization_drift.py  dependency-auto-patcher.py  mobile-telemetry-collector.py  performance-regression-monitor.py  security_audit.py  security_scanner.py  validate_mobile_exports.py
tests/: README.md  conftest.py  test_advanced_features.py  test_basic.py  test_comprehensive.py  test_config.py  test_core.py  test_guard_metrics.py  test_guard_orchestrator.py  test_mmmllm.py  test_pipeline_guard.py  test_research_validation.py
(+88 files in other folders)
