[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-multimodal-llm"
version = "0.1.0"
description = "Tiny (<35 MB) vision-text transformer for on-device mobile AI"
authors = [{name = "Daniel Schmidt", email = "mobile-ai@terragon.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "onnx>=1.16.0",
    "tensorflow>=2.15.0",
    "coremltools>=7.0",
    "neural-compressor>=2.5",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]
mobile = [
    "tensorflow-lite>=2.15.0",
    "coremltools>=7.0",
    "onnxruntime>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/terragon-labs/mobile-multimodal-llm"
Documentation = "https://mobile-multimodal-llm.readthedocs.io"
Repository = "https://github.com/terragon-labs/mobile-multimodal-llm"
Issues = "https://github.com/terragon-labs/mobile-multimodal-llm/issues"

[project.scripts]
mobile-mm-train = "mobile_multimodal.scripts.train:main"
mobile-mm-export = "mobile_multimodal.scripts.export:main"
mobile-mm-benchmark = "mobile_multimodal.scripts.benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

# SBOM Generation Configuration
[tool.cyclonedx-bom]
output_format = "json"
output_file = "sbom.json"
include_dev = false
include_optional = true
schema_version = "1.4"

# Security scanning configuration
[tool.safety]
ignore = []
output = "json"
json = true

# Dependency vulnerability scanning
[tool.pip-audit]
output = "json"
format = "json"
desc = true